<resources>
    <string name="app_name">ProjektSM</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">Register</string>
    <string name="action_login">Login</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="register_user">Register User</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>

    <string name="currency">zł</string>

    <string name="borrower">Borrower</string>
    <string name="expense">Expense</string>
    <string name="add_button">Add</string>
    <string name="amount">Amount</string>
    <string name="app_name_2">SplitManager</string>
    <string name="control_your_payments">control your payments</string>
    <string name="you_owe">you owe</string>
    <string name="you_are_owed">you are owed</string>
    <string name="no_money">$0.00</string>
    <string name="total_balance">total balance</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="channel_name">"PaymentManager calling!"</string>
    <string name="channel_description">"Check this new handsome looking notification!"</string>

    <!-- Notifications -->
    <string name="wrong_auth">Wrong username or password!</string>
    <string name="wrong_fill_fields">Fill all fields!</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_user">User</string>
    <string name="menu_management">Management</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_debtors">Debtors</string>
    <string name="menu_expenses">Expenses</string>
    <string name="menu_currency">Currency</string>
    <string name="menu_name">Name</string>
    <string name="menu_surname">Surname</string>

    <string name="textBorrower">Borrower</string>
    <string name="textExpenses">Expenses</string>
    <string name="textMoney">Amount</string>

    <string name="changeUsername">Change your Username</string>
    <string name="logout">Logout</string>

    <string name="nickname">New Username</string>

    <string name="accept_button">Accept</string>

    <string name="changeCurrency">convert currency to your currency</string>


    <string name="api_error">Could not download API</string>

    <string name="pln_change">Your currency is set tu PLN</string>
    <string name="usd_change">Your currency is set tu USD</string>
    <string name="gbp_change">Your currency is set tu GBP</string>
    <string name="eur_change">Your currency is set tu EUR</string>
</resources>