<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpensesActivity"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="0dp">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/purple_700"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/home_white_icon">


        <TextView
            android:id="@+id/textUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textExpenses"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:text="@string/textMoney"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExpenses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/img_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

    <EditText
        android:id="@+id/etExpense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/expense"
        android:minHeight="48dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etAmount"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAddExpense" />

    <Button
        android:id="@+id/btnAddExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="5dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/img_search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/etExpense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvExpenses"
        app:srcCompat="@drawable/search_icon" />

    <LinearLayout
        android:id="@+id/LayoutName2"
        android:layout_width="184dp"
        android:layout_height="42dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/etExpense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvExpenses"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etSearch"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />

    <ImageView
        android:id="@+id/img_search2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/search_icon" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
