<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:background="@color/greenItem"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/LayoutName2"
        android:layout_width="184dp"
        android:layout_height="42dp"
        android:layout_marginStart="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LayoutName"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/nav_plus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:src="@drawable/plus_icon" />

        <TextView
            android:id="@+id/borrowerAmount"
            android:layout_width="86dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/amount"
            android:textColor="#44D52A"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/currency"
            android:layout_width="23dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/currency"
            android:textAlignment="center"
            android:textColor="#44D52A"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutName"
        android:layout_width="162dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/LayoutName2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/nav_man"
            android:layout_width="38dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:src="@drawable/man_icon" />

        <TextView
            android:id="@+id/borrowerName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/borrower"
            android:textAlignment="center"
            android:textSize="15sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>