<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:id="@+id/profile"
    tools:context=".ProfileActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/purple_700"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/home_white_icon">
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="574dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />


    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="176dp"
        android:fontFamily="serif"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <LinearLayout
        android:id="@+id/changeNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName">

        <Button
            android:id="@+id/changeUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/changeUsername"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/Logout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/purple_700"
            android:text="@string/logout"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/accept_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName">

        <Button
            android:id="@+id/accept_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/accept_button"
            android:textColor="@color/white" />
        <EditText
            android:id="@+id/etExpense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginBottom="50dp"
            android:hint="@string/nickname" />

        <Button
            android:id="@+id/Logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/purple_700"
            android:text="@string/logout"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>